# ago-sisdb

./: .dockerignore  .gitignore  404.html  CONTRIBUTE.html  Dockerfile  INSTALL.MD  LICENSE  Makefile  README.MD  README1.MD  comments.md  index.html
api/api_dms/lib/: api_dms
api/api_dms/src/: CMakeLists.txt  api_dms.c  api_dms.h
assets/css/: 1.styles.c6f8df2e.css  3.styles.69e559b3.css
assets/js/: 1.c6f8df2e.js  10.d9f04d2c.js  11.b88a5950.js  2.75f2b9dd.js  3.69e559b3.js  4.edbf551d.js  5.f9e7e58e.js  6.ea140c86.js  7.2bf72557.js  8.1953d0fa.js  9.9de7e288.js  app.1d823e4c.js
client/api_sisdb/: api_sisdb  vsbuild.bat
client/api_sisdb/include/: api_sisdb.h
client/api_sisdb/src/: CMakeLists.txt  api_sisdb.c  api_sisdb.h
client/py/: client.py
client/web/: client.py  drive.js  drive.py  index.html  search.html  style.css
client/web/js/: io-data.js  jquery.autocomplete.min.js
conf/: digger.conf  ds-market.conf  ds-tools.conf  sisdb-client.conf  sisdb-server.conf  son.conf  stk.digger.conf  stocks.conf  sts.conf  stsdb.conf  stsdb.init.conf  tools.conf
config/: index.html
guide/: index.html
pyscript/: api_web.py
pyscript/demo_method/: demo_method.py
pyscript/demo_service/: demo_service.py
sdk/libuv/lib/: uv.lib  uv_a.lib
src/: CMakeLists.txt  README.MD  modules.c  server.c  server.h  worker.c  worker.h
src/20180520/core/: sts_conf.c  sts_conf.h  sts_core.h  sts_json.c  sts_json.h  (+1 more)
src/comm/: comm.h
src/core/: lw_base.h  lw_json.h  lw_list.c  lw_map.c  lw_math.h  lw_public.h  lw_skiplist.h  lw_string.c  lw_string.h  lw_thread.c  lw_thread.h  lw_time.h  lw_zint.h  sis_ai.c  sis_ai.h  sis_ai_ann.h  sis_ai_bayes.c  sis_ai_bayes.h  sis_ai_list.c  sis_ai_list.h  sis_ai_series.c  sis_ai_series.h  sis_bitstream.c  sis_bitstream.h  sis_compress.c  sis_compress.h  sis_conf.c  sis_conf.h  sis_core.h  sis_crypt.c  sis_crypt.h  sis_csv.c  sis_csv.h  sis_db.c  sis_db.h  sis_dbf.c  sis_dbf.h  sis_dict.c  sis_dict.h  sis_dict_hash.c  (+109 more)
src/cs/: README.MD
src/digger/: CMakeLists.txt  Makefile  README.MD  call.c  call.h  digger.c  digger_catch.c  digger_catch.h  digger_io.c  digger_io.h  digger_tools.c  digger_tools.h  server.h
src/ds/: CMakeLists.txt  Makefile  call.c  digger.c  market_shmd.c  market_shmd.h  market_szdb.c  market_szdb.h  server.c  server.h  work_east2day.c  work_east2day.h  work_zh2cw.c  work_zh2cw.h  worker.c  worker.h
src/os/: sts_macro.h
src/platform/: README.md
src/relying/: CMakeLists.txt
src/relying/client/: atomicvar.h  hiredis.h  net.c  redismodule.h  sis_comm.h  sis_redis.c  sis_redis.h
src/relying/libuv/: CMakeLists.txt  CTestTestfile.cmake
src/relying/libuv/samples/echo/: CMakeLists.txt  demo.client  demo.server  echo-client.c  echo-server.c
src/relying/server/: redis.conf  sedVB1Tpj
src/relying/server/src/: Makefile.dep  module.c  redis-cli.c  redismodule.h  release.h  server.c  server.h
src/relying/server/src/modules/: helloworld.c
src/siscs/: CMakeLists.txt  README.MD  sis_http.parser.c  sis_sha.c  sis_ws.c  sis_ws.h  sis_ws.parser.c  sis_ws.parser.h  siscs.c  siscs.h  siscs_io.c  siscs_io.h  siscs_load.c  siscs_load.h
src/sisdb/: CMakeLists.txt  sis_collect.c  sis_collect.h  sis_db.c  sis_db.h  sis_db_file.c  sis_db_file.h  sis_db_io.c  sis_db_io.h  sis_fields.c  sis_fields.h  sis_table.c  sis_table.h  sis_ws.c  sis_ws.h  sisdb.c  sisdb.h  sisdb.map.h  sisdb_call.c  sisdb_call.h  sisdb_collect.c  sisdb_collect.h  sisdb_fields.c  sisdb_fields.h  sisdb_file.c  sisdb_file.h  sisdb_io.c  sisdb_io.h  sisdb_load.c  sisdb_map.c  sisdb_map.h  sisdb_method.c  sisdb_method.h  sisdb_sys.c  sisdb_sys.h  sisdb_table.c  sisdb_table.h  sisws.c  sisws.h
src/stock/: sis_stock.c  sis_stock.h  sts_stock.c  sts_stock.h
src/sts.1/: CMakeLists.txt  Makefile  call.c  service.c
src/stsdb/: CMakeLists.txt  Makefile  call.c  call.h  digger.c  server.h  sts_collect.c  sts_collect.h  sts_db.c  sts_db.h  sts_db_file.c  sts_db_file.h  sts_db_io.c  sts_db_io.h  sts_fields.c  sts_fields.h  sts_table.c  sts_table.h  sts_zip.c  sts_zip.h  stsdb.c  stsserver.c  stsserver.h
test/: CMakeLists.txt  Makefile  cmd-demo.conf  conf.c  local.conf  market.conf  modules.c  remote.conf  select.json  sis.conf  sisa.conf  sisa.json  test  test.conf  test.csv
workers/frwdb/: README.MD  frwdb.c  frwdb.h  frwdb.t.c  frwdb_reader.c
workers/incrdb/: incrdb.c  incrdb.h  incrdb_disk.c  incrdb_worker.c
workers/memdb/: memdb.c  memdb.h
workers/service_core/: service_core.h
workers/service_search/: service_search.c  service_search.h
workers/sicdb/: sicdb.c  sicdb.h  snodb_disk.c
workers/sis_auth/: sis_auth.c  sis_auth.h
workers/sis_notice/: sis_notice.c  sis_notice.h
workers/sisdb/: README.MD  sisdb.c  sisdb.h  sisdb_collect.c  sisdb_collect.h  sisdb_collect_del.c  sisdb_collect_get.c  sisdb_collect_set.c  sisdb_disk.c  sisdb_fmap.c  sisdb_fmap.h  sisdb_fmap_ctrl.c  sisdb_fmap_fmt.c  sisdb_fmap_read.c  sisdb_fmap_write.c  sisdb_io.c  sisdb_io.h  sisdb_sic.c  sisdb_sic.h  sisdb_sub.c  sisdb_sub.h
workers/sisdb_client/: sisdb.cli.c  sisdb_client.c  sisdb_client.h
workers/sisdb_flog/: sisdb_flog.c  sisdb_flog.h
workers/sisdb_rsdb/: sisdb_rsdb.c  sisdb_rsdb.h
workers/sisdb_rseg/: sisdb_rseg.c  sisdb_rseg.h
workers/sisdb_rsno/: sisdb_rsno.c  sisdb_rsno.h  sisdb_worker.h
workers/sisdb_server/: sisdb_call.c  sisdb_call.h  sisdb_convert.c  sisdb_incr.c  sisdb_incr.h  sisdb_server.c  sisdb_server.h  sisdb_sub.c  sisdb_sub.h  sisdb_sys.c  sisdb_sys.h  sisdb_zip.c  sisdb_zip.h
workers/sisdb_wlog/: sis_disk_files_v1.c  sis_disk_read_v1.c  sis_disk_v1.c  sis_disk_v1.h  sis_disk_write_v1.c  sisdb_rsno_v1.c  sisdb_rsno_v1.h  sisdb_wlog.h  sisdb_wsno_v1.c
workers/sisdb_wsdb/: sisdb_wsdb.c  sisdb_wsdb.h
workers/sisdb_wseg/: sisdb_wseg.c  sisdb_wseg.h
workers/sisdb_wsno/: sisdb_wsno.c  sisdb_wsno.h
workers/snodb/: README.MD  sis_bits_v0.c  sis_bits_v0.h  snodb.c  snodb.h  snodb_disk.c  snodb_reader.c
workers/subdb/: subdb.c  subdb.h
workers/system/: system.c  system.h
zh/: index.html
zh/config/: index.html
zh/guide/: index.html
(+243 files in other folders)
